// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly 1`] = `
<SVGIcon
  small={true}
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
/>
`;

exports[`Icon renders correctly with round, large and background 1`] = `
<CircleIcon
  background="yellow"
  large={true}
  size="large"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
/>
`;

exports[`Icon renders correctly with round, medium and undefined background 1`] = `
<CircleIcon
  medium={true}
  size="medium"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
/>
`;

exports[`Icon renders correctly with xsmall size 1`] = `
<SVGIcon
  background="yellow"
  size="xsmall"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
  theme={
    Object {
      "backgroundDanger": "#ec5659",
      "backgroundDangerDisabled": "#e2e8ea",
      "backgroundDangerHover": "#e62a2a",
      "backgroundInput": "#ffffff",
      "backgroundPrimary": "#50a5e7",
      "backgroundPrimaryDisabled": "#e2e8ea",
      "backgroundPrimaryHover": "#4793cd",
      "backgroundSecondary": "#ffffff",
      "backgroundSecondaryDisabled": "#ffffff",
      "backgroundSecondaryHover": "#ffffff",
      "textBody": "#3f484b",
      "textDanger": "#ffffff",
      "textDangerDisabled": "#c3cbcf",
      "textDangerHover": "#ffffff",
      "textHeading": "#3f484b",
      "textIcon": "#ffffff",
      "textIconInvert": "#1b2224",
      "textInput": "#3f484b",
      "textInputFocus": "#a2abaf",
      "textInputInvalid": "#e62a2a",
      "textInputPlaceholder": "#a2abaf",
      "textPrimary": "#3f484b",
      "textPrimaryDisabled": "#a2abaf",
      "textPrimaryHover": "#ffffff",
      "textPrimaryInvert": "#ffffff",
      "textSecondary": "#3f484b",
      "textSecondaryDisabled": "#c3cbcf",
      "textSecondaryHover": "#ffffff",
      "textSubtitle": "#a2abaf",
    }
  }
  xsmall={true}
/>
`;

exports[`Icon renders correctly without defined size or background 1`] = `
<CircleIcon
  small={true}
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
/>
`;

exports[`Icon renders correctly, invalid size ignored 1`] = `
<CircleIcon
  size="xlarge"
  svgData={
    <svg
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
        transform="translate(1 1)"
      >
        <path
          d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
        />
      </g>
    </svg>
  }
  theme={
    Object {
      "backgroundDanger": "#ED524C",
      "backgroundDangerDisabled": "#E6E7E8",
      "backgroundInput": "#FFFFFF",
      "backgroundPrimary": "#50A5E7",
      "backgroundPrimaryDisabled": "#E6E7E8",
      "backgroundSecondary": "#FFFFFF",
      "backgroundSecondaryDisabled": "#FFFFFF",
      "backgroundSecondaryHover": "#FFFFFF",
      "textBody": "#3F484B",
      "textDanger": "#FFFFFF",
      "textDangerDisabled": "#CDD0D2",
      "textDangerHover": "#FFFFFF",
      "textHeading": "#3F484B",
      "textIcon": "#FFFFFF",
      "textIconInvert": "#222729",
      "textInput": "#3F484B",
      "textInputFocus": "#8B9193",
      "textInputInvalid": "#E92720",
      "textInputPlaceholder": "#8B9193",
      "textPrimary": "#3F484B",
      "textPrimaryDisabled": "#8B9193",
      "textPrimaryHover": "#FFFFFF",
      "textPrimaryInvert": "#FFFFFF",
      "textSecondary": "#3F484B",
      "textSecondaryDisabled": "#CDD0D2",
      "textSecondaryHover": "#FFFFFF",
      "textSubtitle": "#8B9193",
    }
  }
  xlarge={true}
/>
`;

exports[`Icon renders nothing with an invalid name and undefined size attribute 1`] = `""`;

exports[`Icon renders nothing with an invalid name and undefined size attribute 2`] = `""`;

exports[`Icon renders nothing with an undefined name and undefined size 1`] = `""`;

exports[`Icon renders nothing with invalid name and invalid size 1`] = `""`;

exports[`Icon renders nothing with round, invalid name and invalid size 1`] = `""`;
